<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/separation"
        android:layout_margin="@dimen/separation">

        <LinearLayout
            android:background="@color/colorHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:text="@string/login"
                android:textSize="@dimen/title"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/separation">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="8"
                android:src="@drawable/correo" />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etUser"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/user"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/separation">

            <ImageView
                android:src="@drawable/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="8"/>

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/password"/>

        </LinearLayout>

        <Button
            android:padding="@dimen/separation"
            android:layout_gravity="center"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:padding="@dimen/separation"
            android:layout_gravity="center"
            android:id="@+id/btnForgotPassword"
            android:text="@string/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>